SERVER-2639 assert early when inserting something too big into capped collection